cluster/argocd/base/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-ingress-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
    tls:
      mode: SIMPLE
      credentialName: argocd-ingress-cert # This should match the Certificate secretName
    # hosts:
    # - argo.aksnp.diehlabs.com # This should match a DNS name in the Certificate
